Added font preload and compressed wood-background image for the flipped cards. Moved the wood-background image to public folder for vercel rendering to improve animation time and reduce lag.

--- a/src/components/flashcards/cards/flashcard.css
+++ b/src/components/flashcards/cards/flashcard.css
@@ -50,7 +50,7 @@
 
 .flashcard-back {
   transform: rotateY(180deg);
-  background-image: url("/assets/beige-wooden-textured-flooring-background.jpg");
+  background-image: url("/assets/wood-background.jpg");
 }
 
 .flashcard-text {
